--- a/BookMark.Client/Views/Event/Index.cshtml
+++ b/BookMark.Client/Views/Event/Index.cshtml
@@ -11,7 +11,7 @@
         <th>DateTime</th>
         <th>Event</th>
       </tr>
-    foreach (var ev in @Model)
+    @foreach (var ev in @Model)
     {
       <tr>
         <td>@ev.DateTime</td>
