Bippity boppity boo

--- a/BookMark.Client/Views/Home/Index.cshtml
+++ b/BookMark.Client/Views/Home/Index.cshtml
@@ -2,5 +2,10 @@
     ViewData["Title"] = "Home Page";
 }
 
-<a href="/user/register">Register</a>
-<a href="/user/login">Login</a>
+<a href="/user/register">Register as User</a>
+<a href="/user/login">Login as User</a>
+
+<br/>
+<br/>
+<a href="/organization/register">Register as an Organization</a>
+<a href="/organization/login">Login as an Organization</a>
