--- a/BookMark.Client/Views/User/Register.cshtml
+++ b/BookMark.Client/Views/User/Register.cshtml
@@ -11,5 +11,6 @@
 	<label asp-for="@Model.Password">Password</label>
 	<input type="password" asp-for="@Model.Password">
 	@Html.ValidationMessageFor(uvm => uvm.Password)
-	<button type="submit">Login</button>
+  
+	<button type="submit">Register</button>
 </form>
