Added whitespace removal for registrations, Logout, fixed home button, progress on event list view

--- a/BookMark.Client/Views/Event/Index.cshtml
+++ b/BookMark.Client/Views/Event/Index.cshtml
@@ -15,7 +15,7 @@
     {
       <tr>
         <td>@ev.DateTime</td>
-        <td>@ev.Name</td>
+        <td>@Html.ActionLink(@ev.Name, "Detail", new { id = ev.EventID }) </td>
       </tr>
     }
     </table>
