--- a/BookMark.Client/Views/Event/Create.cshtml
+++ b/BookMark.Client/Views/Event/Create.cshtml
@@ -41,6 +41,7 @@
           </script>
       </div>
   </div>
+  @Html.ValidationMessageFor(evm => evm.DateTime)
 
 	<button type="submit">Submit</button>
 </form>
