fixed syntax errors

--- a/BookMark.Client/Views/Event/Confirmation.cshtml
+++ b/BookMark.Client/Views/Event/Confirmation.cshtml
@@ -1,6 +1,6 @@
 @model BookMark.Client.Models.EventViewModel
 
-@if (@ModelBinderAttribute != null)
+@if (@Model != null)
 {
   <h1>Confirmation: Event Created!</h1>
 
