--- a/BookMark.Client/Views/Organization/Index.cshtml
+++ b/BookMark.Client/Views/Organization/Index.cshtml
@@ -2,6 +2,8 @@
 
 <h1>Welcome @Model.Name!</h1>
 
-<a href="/event/index">Events</a>
+<a href="/event/orgevents">Events</a>
 <br/>
 <a href="/event/create">Create an Event</a>
+<br/>
+<a href="/organization/updateinfo">Update your information</a>
