--- a/BookMark.Client/Views/User/Index.cshtml
+++ b/BookMark.Client/Views/User/Index.cshtml
@@ -1,6 +1,9 @@
 @model BookMark.Client.Models.UserViewModel
 
 <h1>Welcome @Model.Name!</h1>
-<h1>Your password is @Model.Password!</h1>
 
-<a href="/event/index">Events</a>
+<a href="/event/userevents">Events</a>
+
+
+<br/><br/>
+<a href="/event/index">Find Events</a>
