--- a/BookMark.Client/Views/User/Register.cshtml
+++ b/BookMark.Client/Views/User/Register.cshtml
@@ -1,5 +1,7 @@
 @model BookMark.Client.Models.UserViewModel
 
+<h1>Register as a User</h1>
+
 <p>@ViewData["RegErr"]</p>
 
 <form action="/user/register" method="POST">
