--- a/BookMark.Client/Views/Event/Detail.cshtml
+++ b/BookMark.Client/Views/Event/Detail.cshtml
@@ -6,10 +6,10 @@
 
   <p>Event Name: @Model.Name</p>
 
-  @if(@Model.Organization != null)
+  @* @if(@Model.Organization != null)
   {
     <p>Event Organizer: @Model.Organization.Name</p>
-  }
+  } *@
 
   <p>Event Date and Time: @Model.DateTime</p>
 
