--- a/BookMark.Client/Views/Event/RSVP.cshtml
+++ b/BookMark.Client/Views/Event/RSVP.cshtml
@@ -4,10 +4,10 @@
 {
   <h1>@Model.Name</h1>
 
-  @if(@Model.Organization != null)
+  @* @if(@Model.Organization != null)
   {
     <p>Event Organizer: @Model.Organization.Name</p>
-  }
+  } *@
 
   <p>Event Date and Time: @Model.DateTime</p>
 
